app/assets/stylesheets/site/artifact_detail.css
/* 
    Document   : artifact_detail
    Created on : Jun 8, 2014, 9:19:47 PM
    Author     : rlittle
    Description:
        Purpose of the stylesheet follows.
*/

root { 
    display: block;
}

div.edit-artifact {
position: absolute;
z-index: 20;
width: 32px;
height: 32px;
MARGIN-TOP: -35px;
margin-left: -35px;
border-image: initial;
}

div#page-slider-gallary-page {
top: initial;
right: initial;
}

#page-content {
min-height: 650px !important;
}

div#portfolio-footer {
bottom: 0px;
position: absolute;
}

ul.slidesjs-pagination {
display: none;
}


#slides3 a.slidesjs-previous {
top: initial;
left: 0px;
width: 18px;
  height: 16px;
  display: block;
z-index: 76;
background-repeat: no-repeat;
bottom: 0px;
}

#slides3 a.slidesjs-next{
position: absolute;
top: initial;
left:initial;
right: 0px;
width: 18px;
  height: 16px;
  display: block;
z-index: 76;
background-repeat: no-repeat;
bottom: 0px;
}

div#image-before-button {
position: absolute;
z-index: 80;
background-color: rgba(255, 255, 255, 0.7);
color: black;
text-transform: uppercase;
padding: 8px;
font-size: 10px;
font-family: open_sansbold;
top: 0px;
cursor: pointer;
}


div#before-picture {
  position: absolute;
  z-index: 81;
  top: 1px;
  background: lightgray;
  box-shadow: 0px 0px 20px black;
  border: 10px white solid;
  left: 1px;
  display: none;
}

div#close-before-picture {
position: absolute;
background-color: rgba(0, 0, 0, 0.36);
cursor: pointer;
padding: 5px;
color: white;
margin: 8px;
font-family: open_sanslight;
height: 15px;
font-size: 13px;
}

div#portfolio-footer {
  bottom: 10px;
  position: absolute;
  width: 885px;
  text-align: right;
  text-transform: uppercase;
  color: black;
  font-family: open_sansbold;
  padding-bottom: 10px;
}

div#portfolio-footer a {
color: black;
text-decoration: none;
}

div#portfolio-footer a:hover {
color: darkgrey;
text-decoration: underline;
}

div#content {
  height: 670px;
}

div.artifact-detail {
  width: 912px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 20px;
  position: relative;
  height: 100%;

}

div.next_artifact {
  text-align: right;
  display: inline-block;
  float: right;
}

div.previos_artifact {
  text-align: left;
  display: inline-block;
  float: left;
}

div.artifact-pagination {
  display: inline-block;
  position: relative;
  width: 100%;
}

